# dspro1

./: .gitignore  README.md
docs/: DISPRO1_ProjectProposal_Team8_PredictingApartmentRentalPrices.tex
docs/PresentationMidTerm/: dspro1_rent_prediction_presentation.pptx
docs/data-sheet/: datasheet.tex
docs/final-report/: main.tex  references.bib
docs/schemes /: Predicting Apartment Rental Prices in Switzerland V2.drawio  Predicting Apartment Rental Prices in Switzerland.drawio
src/external-sources/: swisstopo.ipynb
src/py-tests/: test.ipynb
src/rentables-scraper/: Cargo.toml  element.html  output.html  output_listings.html
src/rentables-scraper/migrations/: 20260413130633_details_table.sql  20260413140702_listing_details.sql  20260413141619_remove_bigint.sql
src/rentables-scraper/src/: _main.rs  detail_parser.rs  main.rs  mgt.rs
src/rentables-scraper/src/data/: db.rs  mod.rs
src/scrapegoat/: Cargo.toml
src/scrapegoat/src/: lib.rs
src/scrapegoat/src/scraper/: mod.rs  pool.rs  proxy.rs
